Renamed icon 'text-' classes to begin with 'icon-'. It is semantically a little worse, but makes it possible to target actual text with the 'text-' prefix.

--- a/frontend/core/src/main/webapp/static/app/base/listFooter.html
+++ b/frontend/core/src/main/webapp/static/app/base/listFooter.html
@@ -5,7 +5,7 @@
 
   <div class="group-symmetrical--middle">
     <a href ng-click="addItem()">
-      <span class="text-plus"></span>
+      <span class="icon-plus"></span>
     </a>
   </div>
 
