--- a/frontend/core/src/main/webapp/static/app/base/toaster.html
+++ b/frontend/core/src/main/webapp/static/app/base/toaster.html
@@ -13,6 +13,6 @@
     </span>
   </div>
   <div class="group-mixed--right">
-    <a href ng-click="closeNotificationAndCall(notification)"><span class="text-x"></span></a>
+    <a href ng-click="closeNotificationAndCall(notification)"><span class="icon-x"></span></a>
   </div>
 </div>
