--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -1,7 +1,7 @@
 <div ng-if="entryState !== 'download'">
   <section class="container-content">
     <div class="group-instruction-jumbotron row">
-      <p class="group-instruction--header"><span class="text-logo"></span></p>
+      <p class="group-instruction--header"><span class="icon-logo"></span></p>
       <p class="group-instruction--main">
         <span class="text-jumbotron">change</span><br/>
         <span class="text-jumbotron">the way</span><br/>
@@ -25,7 +25,7 @@
   <section class="container-content" style="padding-bottom: 122px;">
     <ul style="padding-left: 28px;">
       <li style="display:inline; margin-right: 15px;">
-        <span class="text-logo"></span>
+        <span class="icon-logo"></span>
       </li>
       <li style="display:inline;">
         <a href="http://www.extendedmind.org" target="_blank">
