--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -34,7 +34,7 @@
       </div>
       <div class="group-mixed--right">
         <a href ng-if="isFavoriteList(getActiveList())" ng-click="unfavoriteList(getActiveList())">
-          <span class="text-star small inverse"></span>
+          <span class="icon-star small inverse"></span>
         </a>
       </div>
     </div>
@@ -47,7 +47,7 @@
       </div>
       <div class="group-mixed--right">
         <a href ng-click="unfavoriteList(list)">
-          <span class="text-star small inverse"></span>
+          <span class="icon-star small inverse"></span>
         </a>
       </div>
     </div>
