--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -9,7 +9,7 @@
   </div>
   <div ng-if="note.transientProperties.favorited" class="group-mixed--right">
     <a href ng-click="unfavoriteNote(note)">
-      <span class="text-star small"></span>
+      <span class="icon-star small"></span>
     </a>
   </div>
 </div>
