--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -6,7 +6,7 @@
           <span class="text-navigation-back" ng-bind="titlebarHasText() && !tag.deleted ? 'save' : 'back'"></span>
         </a>
         <a ng-if="!tag.deleted" class="group-symmetrical--right" href ng-click="deleteTagInEdit()" >
-          <span class="text-trash"></span>
+          <span class="icon-trash"></span>
         </a>
         <a ng-if="tag.deleted" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteTagInEdit()"><span class="text-navigation">restore</span></a>
       </div>
