--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -6,7 +6,7 @@
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !list.deleted ? 'save' : 'back'"></span>
         </a>
         <a ng-if="!list.deleted" class="group-symmetrical--right" href ng-click="deleteListInEdit()" >
-          <span class="text-trash"></span>
+          <span class="icon-trash"></span>
         </a>
         <a ng-if="list.deleted" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteList(list)"><span class="text-navigation">restore</span></a>
       </div>
@@ -32,7 +32,7 @@
         <footer ng-hide="descriptionFocused" class="container-content--after editor-footer">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <a href ng-click="clickFavorite()" class="group-symmetrical--left">
-              <span class="text-star" ng-class="!isFavoriteList(list) && 'inactive'"></span>
+              <span class="icon-star" ng-class="!isFavoriteList(list) && 'inactive'"></span>
             </a>
             <a href ng-click="swipeToAdvanced()" ng-hide="isFooterNavigationHidden()" class="group-symmetrical--right link-navigation">
               <span class="text-navigation-forward">advanced</span>
