Fixed vertical layout for convert

--- a/frontend/core/src/main/webapp/static/app/base/later.html
+++ b/frontend/core/src/main/webapp/static/app/base/later.html
@@ -1,5 +1,5 @@
 <div class="table two-to-left">
-  <div class="table-row short-text">
+  <div class="table-row">
     <a href class="table-cell" ng-click="setDateToday()">
       <span class="text-convert">today</span>
     </a>
@@ -8,7 +8,7 @@
     </a>
   </div>
 
-  <div class="table-row short-text">
+  <div class="table-row">
     <a href class="table-cell" ng-click="setDateDayAfterTomorrow()">
       <span class="text-convert">2 days later</span>
     </a>
@@ -17,7 +17,7 @@
     </a>
   </div>
 
-  <div class="table-row short-text">
+  <div class="table-row">
     <a href class="table-cell" ng-click="setDateFirstDayOfNextWeek()">
       <span class="text-convert">next week</span>
     </a>
