--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -13,8 +13,11 @@
 
       <div class="row-vertically-centered with-textarea">
         <!-- TODO: @ or # symbol! -->
-        <textarea type="text" ng-model="titlebar.text" ng-keydown="tagTitlebarTextKeyDown($event)" editable-field
-        editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="enter {{tag.tagType}} title&#8230;" maxlength="128" required autocapitalize="none" autocorrect="off"></textarea>
+        <textarea ng-model="titlebar.text" ng-keydown="tagTitlebarTextKeyDown($event)" editable-field
+          editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic
+          dynamic-placeholder="enter {{tag.tagType}} title&#8230;" maxlength="128"
+          autocapitalize="none" autocorrect="off">
+        </textarea>
       </div>
     </div>
   </header>
@@ -23,12 +26,15 @@
     <div class="container-content" drawer-override-aisle="right">
 
       <div class="row-vertically-centered with-textarea">
-        <textarea type="text" ng-model="tag.link" msd-elastic maxlength="128" placeholder="enter url&#8230;">
+        <textarea ng-model="tag.link" msd-elastic maxlength="128" placeholder="enter url&#8230;"
+          autocapitalize="none" autocorrect="off">
         </textarea>
       </div>
 
       <div class="row-vertically-centered with-textarea">
-        <textarea ng-model="tag.description" msd-elastic placeholder="enter description&#8230;" maxlength="1024"></textarea>
+        <textarea ng-model="tag.description" msd-elastic placeholder="enter description&#8230;"
+          maxlength="1024" autocapitalize="none" autocorrect="off">
+        </textarea>
       </div>
 
     </div>
