--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -12,8 +12,11 @@
       </div>
 
       <div class="row-vertically-centered with-textarea">
-        <textarea type="text" ng-model="titlebar.text" ng-keydown="itemTitlebarTextKeyDown($event)" editable-field
-        editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic dynamic-placeholder="enter item title&#8230;" maxlength="128" required autocapitalize="none" autocorrect="off"></textarea>
+        <textarea ng-model="titlebar.text" ng-keydown="itemTitlebarTextKeyDown($event)" editable-field
+          editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
+          msd-elastic dynamic-placeholder="enter item title&#8230;" maxlength="128"
+          autocapitalize="none" autocorrect="off">
+        </textarea>
       </div>
     </div>
   </header>
@@ -21,7 +24,9 @@
   <div ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}" class="container-fluid--inner">
     <div class="container-content" drawer-override-aisle="right">
       <div class="row-vertically-centered with-textarea">
-        <textarea ng-model="item.description" msd-elastic placeholder="enter description&#8230;" maxlength="1024" autocapitalize="none" autocorrect="off"></textarea>
+        <textarea ng-model="item.description" msd-elastic placeholder="enter description&#8230;"
+          maxlength="1024" autocapitalize="none" autocorrect="off">
+        </textarea>
       </div>
     </div>
     <footer class="container-content--after editor-footer">
