--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,13 +3,14 @@
     <h2 class="group-heading justified row" ng-bind="items.length + ' items'"></h2>
 
     <div list-item-add="{transientProperties: {itemType: 'item'}}" list-item-add-save="saveItem(newItem)">
-      <form role="form" class="group-mixed with-checkbox swiper-no-swiping" ng-submit="callAndExit(saveItem, newItem)"
-      data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
-      editable-field-container-clicked-elsewhere="clickedElsewhere()">
+      <form role="form" class="group-mixed with-checkbox swiper-no-swiping"
+        ng-submit="callAndExit(saveItem, newItem)" data-snap-ignore="true" editable-field-container
+        editable-field-container-clicked-elsewhere="clickedElsewhere()"
+        autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
           <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)" editable-field
-          editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)" placeholder="add item&#8230;"
-          maxlength="128">
+            editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)"
+            placeholder="add item&#8230;" maxlength="128">
           </textarea>
         </div>
         <div class="group-mixed--right">
