Made font size in heading text of lists tasks same as other list headings.

--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -2,7 +2,7 @@
   <section class="container-content" list="allActiveTasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}" list-order="top" swiper-prevent>
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
-        <h2 class="group-heading long justified">
+        <h2 class="group-heading justified">
           <span class="text-heading">tasks</span>
         </h2>
       </div>
